--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
     </div>
   </div>
 
+<script src="/socket.io/socket.io.js"></script>
+<script src="chat.js"></script>
+
   <script src="chat.js"></script>
 </body>
 </html>
