--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,19 @@
   <link rel="stylesheet" href="styles.css" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </head>
-
 <body>
-  <div id="chatWidget">
-    <div id="chatHeader">Chat with Trucktaxonline</div>
-    <div id="chatBody" style="display: none;">
+
+  <!-- 💬 Chat bubble launcher -->
+  <div id="chatBubble">💬</div>
+
+  <!-- 💬 Floating Chat Widget -->
+  <div id="chatWidget" class="hidden">
+    <div id="chatHeader">
+      <strong>Chat with Trucktaxonline</strong>
+      <button id="closeBtn">×</button>
+    </div>
+
+    <div id="chatBody">
       <div id="messages"></div>
       <div id="controls">
         <input type="file" id="fileInput" />
@@ -20,31 +28,6 @@
         <button id="sendBtn">Send</button>
         <button id="downloadBtn">⬇️ Download Chat</button>
       </div>
-    </div>
-  </div>
-  <script src="chat.js"></script>
-</body>
-
-
-  <!-- Chat bubble launcher -->
-  <div id="chatBubble">💬</div>
-
-  <!-- Floating Chat Widget -->
-  <div id="chatWidget" class="hidden">
-    <div id="chatHeader">
-      <strong>Chat with Trucktaxonline</strong>
-      <button id="closeBtn">×</button>
-    </div>
-
-    <div id="messages"></div>
-
-    <div id="controls">
-      <input type="file" id="fileInput" />
-      <input type="text" id="messageInput" placeholder="Type your message..." />
-      <emoji-picker id="emojiPicker" style="position:absolute; display:none;"></emoji-picker>
-      <button id="emojiBtn">😊</button>
-      <button id="sendBtn">Send</button>
-      <button id="downloadBtn">⬇️ Download Chat</button>
     </div>
   </div>
 
