--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="styles.css" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </head>
-
 <body>
   <!-- 💬 Chat Bubble Launcher -->
   <div id="chatBubble">💬</div>
@@ -30,6 +29,8 @@
     </div>
   </div>
 
+  <!-- 📜 Socket & Event Logic -->
+  <script src="/socket.io/socket.io.js"></script>
   <script src="chat.js"></script>
 </body>
 </html>
