Fix floating chat widget click bug

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </head>
 <body>
-  <!-- 💬 Chat Bubble Launcher -->
+
+  <!-- 💬 Chat Bubble -->
   <div id="chatBubble">💬</div>
 
-  <!-- 💬 Floating Chat Widget -->
+  <!-- 💬 Floating Chat Widget (Hidden by default) -->
   <div id="chatWidget" class="hidden">
     <div id="chatHeader">
       <strong>Chat with Trucktaxonline</strong>
@@ -29,8 +30,6 @@
     </div>
   </div>
 
-  <!-- 📜 Socket & Event Logic -->
-  <script src="/socket.io/socket.io.js"></script>
   <script src="chat.js"></script>
 </body>
 </html>
