--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +7,17 @@
   <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js"></script>
 </head>
 <body>
+
+  <!-- Floating Chat Bubble -->
   <div id="chatBubble">💬</div>
 
+  <!-- Floating Chat Widget -->
   <div id="chatWidget" class="hidden">
     <div id="chatHeader">
       <strong>Chat with Trucktaxonline</strong>
       <button id="closeBtn">×</button>
     </div>
-
     <div id="messages"></div>
-
     <div id="controls">
       <input type="file" id="fileInput" />
       <input type="text" id="messageInput" placeholder="Type your message..." />
